<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android.support.design="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.pgmail.martsulg.bachelordegreeproject.viewModels.ProfileViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/softBlue"
        android:orientation="vertical"
        android:textSize="20sp">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_surname"
            style="@style/textInputStyle"
            android.support.design:layout_constraintBottom_toTopOf="@+id/layout_name"
            android.support.design:layout_constraintEnd_toEndOf="parent"
            android.support.design:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/surname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/surname"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={viewModel.surname}" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_name"
            style="@style/textInputStyle"
            android.support.design:layout_constraintBottom_toTopOf="@+id/layout_email"
            android.support.design:layout_constraintEnd_toEndOf="parent"
            android.support.design:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:inputType="text"
                android:maxLines="1"
                android:text="@={viewModel.name}"
                android:importantForAutofill="noExcludeDescendants" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_email"
            style="@style/textInputStyle"
            android.support.design:layout_constraintBottom_toTopOf="@+id/layout_age"
            android.support.design:layout_constraintEnd_toEndOf="parent"
            android.support.design:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:text="@={viewModel.email}"
                android:importantForAutofill="noExcludeDescendants" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_age"
            style="@style/textInputStyle"
            android.support.design:layout_constraintBottom_toTopOf="@+id/UpdateButton"
            android.support.design:layout_constraintEnd_toEndOf="parent"
            android.support.design:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/age"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/age"
                android:inputType="number"
                android:text="@={viewModel.age}"
                android:importantForAutofill="noExcludeDescendants" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/UpdateButton"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="8dp"
            android:background="@color/calmBlue"
            android:onClick="@{() -> viewModel.updateUser()}"
            android:text="@string/update"
            android:textAllCaps="false"
            android:textColor="@color/headerText"
            android:textSize="24sp"
            android.support.design:layout_constraintBottom_toTopOf="@+id/LogOutButton"
            android.support.design:layout_constraintEnd_toEndOf="parent"
            android.support.design:layout_constraintStart_toStartOf="parent" />


        <Button
            android:id="@+id/LogOutButton"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="16dp"
            android:background="@color/red"
            android:onClick="@{() -> viewModel.createDialog()}"
            android:text="@string/log_out"
            android:textAllCaps="false"
            android:textColor="@color/headerText"
            android:textSize="24sp"
            android.support.design:layout_constraintBottom_toBottomOf="parent"
            android.support.design:layout_constraintEnd_toEndOf="parent"
            android.support.design:layout_constraintStart_toStartOf="parent" />


    </android.support.constraint.ConstraintLayout>
</layout>
