<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android.support.design="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="viewModel"
            type="com.pgmail.martsulg.buchelordegreeproject.viewModels.RegistryViewModel" />
    </data>

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray">

        <ImageButton
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:src="@mipmap/return_arrow"
            android:background="@color/gray"
            android.support.design:layout_constraintStart_toStartOf="parent"
            android.support.design:layout_constraintTop_toTopOf="parent" />

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_signInEditName"
            style="@style/textInputStyle"
            android.support.design:layout_constraintBottom_toTopOf="@+id/layout_signUpEditSurname"
            android.support.design:layout_constraintEnd_toEndOf="parent"
            android.support.design:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signInEditName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/name"
                android:text="@={viewModel.name2reg}" />
        </android.support.design.widget.TextInputLayout>

        <!--<EditText-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:hint="@string/name"-->
        <!--android:text="@={viewModel.name2reg}"-->
        <!--tools:layout_editor_absoluteX="55dp"-->
        <!--tools:layout_editor_absoluteY="128dp" />-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_signUpEditSurname"
            style="@style/textInputStyle"
            android.support.design:layout_constraintBottom_toTopOf="@+id/layout_signUpEditEmail"
            android.support.design:layout_constraintEnd_toEndOf="parent"
            android.support.design:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signUpEditSurname"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/surname"
                android:text="@={viewModel.surname2reg}" />
        </android.support.design.widget.TextInputLayout>

        <!--<EditText-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:hint="@string/surname"-->
        <!--android:text="@={viewModel.surname2reg}"-->
        <!--tools:layout_editor_absoluteX="55dp"-->
        <!--tools:layout_editor_absoluteY="194dp" />-->


        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_signUpEditEmail"
            style="@style/textInputStyle"
            android.support.design:layout_constraintBottom_toTopOf="@+id/layout_signUpEditPassword"
            android.support.design:layout_constraintEnd_toEndOf="parent"
            android.support.design:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signUpEditEmail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/email"
                android:text="@={viewModel.email2reg}" />
        </android.support.design.widget.TextInputLayout>

        <!--<EditText-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:hint="@string/email"-->
        <!--android:text="@={viewModel.email2reg}"-->
        <!--tools:layout_editor_absoluteX="55dp"-->
        <!--tools:layout_editor_absoluteY="254dp" />-->

        <android.support.design.widget.TextInputLayout
            android:id="@+id/layout_signUpEditPassword"
            style="@style/textInputStyle"
            android.support.design:layout_constraintBottom_toTopOf="@+id/SignUpButton"
            android.support.design:layout_constraintEnd_toEndOf="parent"
            android.support.design:layout_constraintStart_toStartOf="parent">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/signUpEditPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/password"
                android:text="@={viewModel.password2reg}" />
        </android.support.design.widget.TextInputLayout>


        <!--<EditText-->
        <!--android:layout_width="300dp"-->
        <!--android:layout_height="40dp"-->
        <!--android:layout_gravity="center_horizontal"-->
        <!--android:hint="@string/password"-->
        <!--android:text="@={viewModel.password2reg}"-->
        <!--tools:layout_editor_absoluteX="55dp"-->
        <!--tools:layout_editor_absoluteY="327dp" />-->

        <Button
            android:id="@+id/SignUpButton"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:background="@color/calmBlue"
            android:onClick="@{() -> viewModel.onSignUpClick()}"
            android:text="@string/signUp"
            android:textAllCaps="false"
            android:textColor="@color/headerText"
            android:textSize="24sp"
            android.support.design:layout_constraintBottom_toTopOf="@+id/or"
            android.support.design:layout_constraintEnd_toEndOf="parent"
            android.support.design:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/or"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:text="@string/or"
            android:textColor="@color/darkBue"
            android:textSize="12sp"
            android.support.design:layout_constraintBottom_toTopOf="@+id/fbBtn"
            android.support.design:layout_constraintEnd_toEndOf="parent"
            android.support.design:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/fbBtn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@color/brightBlue"
            android:text="Facebook"
            android.support.design:layout_constraintBottom_toTopOf="@+id/twBtn"
            android.support.design:layout_constraintEnd_toEndOf="parent"
            android.support.design:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/twBtn"
            android:layout_width="200dp"
            android:layout_height="40dp"
            android:layout_marginBottom="20dp"
            android:background="@color/brightBlue"
            android:text="Twitter"
            android.support.design:layout_constraintBottom_toTopOf="@+id/signInQuestion"
            android.support.design:layout_constraintEnd_toEndOf="parent"
            android.support.design:layout_constraintStart_toStartOf="parent" />

        <RelativeLayout
            android:id="@+id/signInQuestion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="20dp"
            android.support.design:layout_constraintBottom_toBottomOf="parent"
            android.support.design:layout_constraintEnd_toEndOf="parent"
            android.support.design:layout_constraintStart_toStartOf="parent">

            <TextView
                android:id="@+id/questionIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/AccQuestion"
                android:layout_centerHorizontal="true"
                android:textColor="@color/calmBlue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/goToSignIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:onClick="@{() -> viewModel.onSignInClick()}"
                android:text="@string/signIn"
                android:textColor="@color/brightBlue"
                android:textSize="16sp"
                android:layout_marginStart="15dp"
                android:layout_toEndOf="@id/questionIn" />

        </RelativeLayout>


    </android.support.constraint.ConstraintLayout>
</layout>